# Kama-HTTPServer

./: .clang-format  .gitignore  CMakeLists.txt  ToyAppsCMakeLists.txt  build_aiapp.sh  build_test.sh  build_webapp.sh  gen_database.sh  init_mysql.sh  initdb.sql
AIApps/ChatServer/include/AIUtil/: AIConfig.h
HttpServer/include/http/: HttpRequest.h  HttpServer.h
HttpServer/include/middleware/: Middleware.h  MiddlewareChain.h
HttpServer/include/middleware/cors/: CorsMiddleware.h
HttpServer/include/router/: Router.h
HttpServer/include/session/: Session.h  SessionManager.h  SessionStorage.h
HttpServer/include/utils/: MysqlUtil.h
HttpServer/include/utils/db/: DbConnection.h  DbConnectionPool.h
HttpServer/src/http/: HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp
HttpServer/src/middleware/: MiddlewareChain.cpp
HttpServer/src/router/: Router.cpp
HttpServer/src/session/: Session.cpp  SessionManager.cpp  SessionStorage.cpp
HttpServer/src/utils/db/: DbConnection.cpp  DbConnectionPool.cpp
ToyWebApps/Test/include/: TestServer.h
ToyWebApps/Test/include/handlers/: TestHandler.h
ToyWebApps/Test/src/: TestServer.cpp  main.cpp
ToyWebApps/Test/src/handlers/: TestHandler.cpp
WebApps/GomokuServer/include/: GomokuServer.h
WebApps/GomokuServer/include/handlers/: EntryHandler.h  LoginHandler.h
WebApps/GomokuServer/src/: GomokuServer.cpp  main.cpp
WebApps/GomokuServer/src/handlers/: AiGameMoveHandler.cpp  EntryHandler.cpp  LoginHandler.cpp
